# medusa

./: CHANGELOG.md  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  release.yml
go-template/: Makefile  go.mod  go.sum
go-template/cmd/utm/: configs.go  main.go  migrate.go  server.go
go-template/internal/server/: server.go
go-template/pkg/cmdutil/: cmdutil.go
go-template/pkg/cntx/: fields.go
go-template/pkg/config/: config.go
go-template/pkg/errors/: error.go  errors.go
go-template/pkg/log/: log.go  logger.go
go-template/pkg/server/: mux.go  mux_opt.go  mux_target.go
hooks/: claude-settings.json  medusa-plan-review.sh
medusa/: .env  .env.example  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
medusa/agent-container/: Dockerfile  entrypoint.sh
medusa/crates/app/: Cargo.toml
medusa/crates/app/src/: lib.rs  main.rs  navigator.rs
medusa/crates/app/src/screens/: home.rs  loading.rs  mod.rs
medusa/crates/app/src/state/: app.rs
medusa/crates/ipc/: Cargo.toml
medusa/crates/medusa/: Cargo.toml
medusa/crates/services/: Cargo.toml
medusa/src/: App.tsx  index.css  main.tsx
medusa/src-tauri/: Cargo.toml  tauri.conf.json
medusa/src-tauri/capabilities/: default.json
medusa/src-tauri/icons/: icon.icns
medusa/src-tauri/src/: commands.rs  lib.rs  logging.rs  main.rs  setup.rs  state.rs  task_agent.rs  terminal.rs
medusa/src-tauri/src/agent/: manager.rs  mod.rs  name_generator.rs  orchestrator.rs  types.rs
medusa/src-tauri/src/db/: config.rs  migrations.rs  mod.rs
medusa/src-tauri/src/docker/: container.rs  mod.rs  pty.rs  pty_session.rs
medusa/src-tauri/src/git/: mod.rs  repository.rs
medusa/src-tauri/src/workspace/: archive.rs  manager.rs  mod.rs  types.rs  workspace.rs
medusa/src/components/: AgentHeader.tsx  Ascii.tsx  ChatInterface.tsx  ChatSidebar.tsx  ConversationItem.tsx  CreateNewAgentModal.tsx  Layout.tsx  LoadingOverlay.tsx  RightSidebar.tsx  SearchAgentsModal.tsx  SimpleMarkdown.tsx  Terminal.tsx  TypingAnimation.tsx  WorkspaceSetup.tsx
medusa/src/components/chat/: CodeBlock.tsx  MarkdownRenderer.tsx
medusa/src/components/history/: HistoryPreviewModal.tsx  index.ts
medusa/src/components/kanban/: PlanCard.tsx  PlanReviewModal.tsx  index.ts
medusa/src/components/plan/: AnnotationSidebar.tsx  DecisionBar.tsx  DiffViewer.tsx  PlanViewer.tsx  Toolbar.tsx  index.ts
medusa/src/components/setup/: SetupBanner.tsx  SetupScreen.tsx  index.ts
medusa/src/components/share/: AuthorNameDialog.tsx  ShareButton.tsx  SharedAnnotationSidebar.tsx  SharedPlanViewer.tsx  index.ts
medusa/src/components/tasks/: AgentOutputModal.tsx  CreateTaskModal.tsx  TaskCard.tsx  TaskPreviewModal.tsx  index.ts
medusa/src/components/ui/: button.tsx  dialog.tsx  tooltip-button.tsx  tooltip.tsx
medusa/src/contexts/: AgentContext.tsx  AuthorContext.tsx  FontContext.tsx  SetupContext.tsx  ThemeContext.tsx  WorkspaceContext.tsx
medusa/src/hooks/: useTerminal.ts
medusa/src/lib/: db.ts  index.ts  lemonsqueezy.ts
medusa/src/lib/api/: agent.ts  index.ts  types.ts  workspace.ts
medusa/src/lib/services/: agentService.ts  index.ts  workspaceService.ts
medusa/src/lib/utils/: filesystem.ts  index.ts
medusa/src/pages/: Agent.tsx  App.tsx  Dashboard.tsx  History.tsx  KanbanBoard.tsx  Loading.tsx  PlanReview.tsx  Settings.tsx  Share.tsx  TaskDetail.tsx  Tasks.tsx  UnifiedKanban.tsx
medusa/src/types/: index.ts
medusa/src/utils/: parser.ts  shareCompression.ts
web/: README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/demo/: page.tsx
web/app/docs/: page.tsx
web/app/pricing/: page.tsx
web/app/share/: page.tsx
web/components/: DownloadButton.tsx  Modal.tsx  TypingAnimation.tsx  WaitlistForm.tsx
web/components/landing/: Ascii.tsx  Features.tsx  Footer.tsx  GatekeeperBoss.tsx  Header.tsx  (+5 more)
web/contexts/: AuthorContext.tsx
web/lib/: parser.ts  share.ts  supabase.ts  waitlist.ts
web/supabase/: fix-rls.sql  schema.sql
(+6 files in other folders)
