[workspace]
members = ["crates/app", "crates/ipc", "crates/services"]
default-members = ["crates/app"]
resolver = "2"

package.authors = ["Sachin Beniwal <sachinbeniwal0101@gmail.com>"]

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }