[package]
name = "medusa"
version = "0.2.1"
description = "Medusa Plans - Claude Code Plan Review Tool"
authors = ["you"]
edition = "2021"

[lib]
name = "medusa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
once_cell = "1.19"
scopeguard = "1.2"
