[package]
name = "medusa-app"
description = "Desktop application for Medusa"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "medusa"
path = "src/main.rs"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
# smallvec is included here for convenience, it is used by gpui when creating
# components that can have children. uncomment this line or
# use `cargo add smallvec` to add it to your project
#smallvec = "1.13.2"